Add 'Adding CSS' section to styles.html

--- a/styles.html
+++ b/styles.html
@@ -94,6 +94,38 @@
 					</div>
         </header>
         <section>
+        	<h3>Adding CSS</h3>
+        	<h4>Method #1</h4>
+        	<h5>HTML</h5>
+        	<code>
+        		&lt;h1 style="color: red;"><i>Heading</i>&lt;/h1>
+        	</code>
+        	<h4>Method #2</h4>
+        	<h5>HTML</h5>
+        	<code>
+	        	&lt;head><br>
+						&nbsp;&nbsp;&lt;style><br>
+						&nbsp;&nbsp;&nbsp;&nbsp;h1 {<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;color: red;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;}<br>
+						&nbsp;&nbsp;&lt;/style><br>
+						&lt;/head>
+					</code>
+					<h4>Method #3</h4>
+					<h5>HTML</h5>
+					<code>
+						&lt;head><br>
+						&nbsp;&nbsp;&lt;link rel="stylesheet" href="main.css"><br>
+						&lt;/head>
+					</code>
+					<h5>CSS</h5>
+					<code>
+						h1 {<br>
+						&nbsp;&nbsp;color: red;<br>
+						}
+					</code>
+				</section>
+        <section>
           <h3>Border Radius</h3>
           <h4>Description</h4>
           <p>
