Update fonts.html with 'Safe fonts'

--- a/fonts.html
+++ b/fonts.html
@@ -462,12 +462,12 @@
           <h4>Safe fonts</h4>
           <p>The fonts that are most safe to use are:</p>
           <ul>
-						<li>Serif: Times New Roman (Windows) / Times (Mac, Unix)</li>
-						<li>Sans Serif: Arial (Windows) / Helvetica (Mac, Unix)</li>
-						<li>Monospaced: Courier New (Windows, Mac) / Courier (Mac, Unix)</li>
+						<li><b>Serif:</b> Times New Roman (Windows) / Times (Mac, Unix)</li>
+						<li><b>Sans Serif:</b> Arial (Windows) / Helvetica (Mac, Unix)</li>
+						<li><b>Monospace:</b> Courier New (Windows, Mac) / Courier (Mac, Unix)</li>
 					</ul>
         </section>
-      </article>
+	    </article>
     </main>
     <footer>
 			<div class="follow-us">
