--- a/selectors.html
+++ b/selectors.html
@@ -1,19 +1,18 @@
 <!--
-	selectors.html
- 	Copyright (C) 2017  Marios Sofokleous
-  
-  This program is free software; you can redistribute it and/or modify it under 
+	This file is part of HTML5Tech.
+ 	
+  HTML5Tech is free software; you can redistribute it and/or modify it under 
   the terms of the GNU General Public License as published by the Free Software 
   Foundation; either version 3 of the License, or (at your option) any later 
   version. 
   
-  This program is distributed in the hope that it will be useful, but 
+  HTML5Tech program is distributed in the hope that it will be useful, but 
   WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
   FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more 
   details. 
 
   You should have received a copy of the GNU General Public License
-  along with this program; if not, write to the Free Software Foundation,
+  along with HTML5Tech; if not, write to the Free Software Foundation,
   Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
 --> 
 
@@ -723,8 +722,10 @@
           			&nbsp;&nbsp;font-size: 20px;<br>
           			}
           		</code>
-          		<p>Non-conflicting properties will be combined.
-          		The code section above is equivalent to the one below:</p>
+          		<p>
+          			Non-conflicting properties will be combined. The code section 
+          			above is equivalent to the one below:
+          		</p>
           		<h5>HTML</h5>
           		<code>
           			<i>element</i> {<br>
