--- a/float.html
+++ b/float.html
@@ -321,6 +321,7 @@
           <h4>Examples</h4>
           <ol>
             <li>
+              <p>How float clearing works</p>
               <h5>HTML</h5>
               <code>
                 &lt;div><br>
@@ -432,6 +433,246 @@
                       The quick brown fox jumps over the lazy dog.
                     </p>
                   </div>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <p>
+                Float clearing techniques
+              </p>
+              <ul>
+                <li>
+                  <p>No <i>clear</i> specified</p>
+                  <h5>HTML</h5>
+                  <code>
+                    &lt;div><br>
+                    &nbsp;&nbsp;&lt;img id="float-image-7" src="images/avatar.png"alt="avatar" width="150"><br>
+                    &nbsp;&nbsp;&lt;p><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&lt;/p><br>
+                    &lt;/div>
+                  </code>
+                  <h5>CSS</h5>
+                  <code>
+                    div {<br>
+                    &nbsp;&nbsp;padding: 0;<br>
+                    &nbsp;&nbsp;margin: 0;<br>
+                    &nbsp;&nbsp;border: 5px solid green;<br>
+                    }<br>
+                    <br>
+                    #float-image-7 {<br>
+                    &nbsp;&nbsp;float: left;<br>
+                    }<br>
+                  </code>
+                  <h5>Result</h5>
+                  <div id="float-10">
+                    <img id="float-image-7" src="images/avatar.png"alt="avatar" width="150">
+                    <p>
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                    </p>
+                  </div>
+                  <div class="target">
+                    <p><b>Disadvantages:</b></p>
+                    <ol>
+                      <li>Background/border does not extend without clearing.</li>
+                      <li>Requires sequence to stay intact otherwise it breaks.</li>
+                    </ol>
+                  </div>
+                </li>
+                </li>
+                <li>
+                  <p>Clearing method #1:</p>
+                  <h5>HTML</h5>
+                  <code>
+                    &lt;div><br>
+                    &nbsp;&nbsp;&lt;img id="float-image-8" src="images/avatar.png"alt="avatar" width="150"><br>
+                    &nbsp;&nbsp;&lt;p><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&lt;/p><br>
+                    &lt;/div>
+                  </code>
+                  <h5>CSS</h5>
+                  <code>
+                    div {<br>
+                    &nbsp;&nbsp;padding: 0;<br>
+                    &nbsp;&nbsp;margin: 0;<br>
+                    &nbsp;&nbsp;border: 5px solid green;<br>
+                    }<br>
+                    <br>
+                    #float-image-8 {<br>
+                    &nbsp;&nbsp;float: left;<br>
+                    }<br>
+                    <br>
+                    div p {<br>
+                    &nbsp;&nbsp;clear: left;<br>
+                    }
+                  </code>
+                  <h5>Result</h5>
+                  <div id="float-11">
+                    <img id="float-image-8" src="images/avatar.png"alt="avatar" width="150">
+                    <p>
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                    </p>
+                  </div>
+                  <p>
+                    <b>Advantage:</b> Background/border extends automatically.<br>
+                    <b>Disadvantage:</b> This method is not ideal if you want text next to an image.
+                  </p>
+                </li>
+                <li>
+                  <p>Clearing method #2:</p>
+                  <h5>HTML</h5>
+                  <code>
+                    &lt;div><br>
+                    &nbsp;&nbsp;&lt;img id="float-image-9" src="images/avatar.png"alt="avatar" width="150"><br>
+                    &nbsp;&nbsp;&lt;p><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&lt;/p><br>
+                    &nbsp;&nbsp;&lt;div id="clear-1">&lt;/div><br>
+                    &lt;/div>
+                  </code>
+                  <h5>CSS</h5>
+                  <code>
+                    div {<br>
+                    &nbsp;&nbsp;padding: 0;<br>
+                    &nbsp;&nbsp;margin: 0;<br>
+                    &nbsp;&nbsp;border: 5px solid green;<br>
+                    }<br>
+                    <br>
+                    #float-image-9 {<br>
+                    &nbsp;&nbsp;float: left;<br>
+                    }<br>
+                    <br>
+                    #clear-1 {<br>
+                    &nbsp;&nbsp;border: 5px solid red;<br>
+                    &nbsp;&nbsp;clear: both;<br>
+                    }
+                  </code>
+                  <h5>Result</h5>
+                  <div id="float-12">
+                    <img id="float-image-9" src="images/avatar.png"alt="avatar" width="150">
+                    <p>
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                    </p>
+                    <div id="clear-1"></div>
+                  </div>
+                  <p>
+                    <b>Advantage:</b> Background/border extends to the height of the floated element.<br>
+                    <b>Disadvantage:</b> This method requires an empty &lt;div> element to achieve the clear.
+                  </p>
+                </li>
+                <li>
+                  <p>Clearing method #3 (Recommended):</p>
+                  <h5>HTML</h5>
+                  <code>
+                    &lt;div id="group"><br>
+                    &nbsp;&nbsp;&lt;img id="float-image-10" src="images/avatar.png"alt="avatar" width="150"><br>
+                    &nbsp;&nbsp;&lt;p><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;The quick brown fox jumps over the lazy dog.<br>
+                    &nbsp;&nbsp;&lt;/p><br>
+                    &lt;/div>
+                  </code>
+                  <h5>CSS</h5>
+                  <code>
+                    #group {<br>
+                    &nbsp;&nbsp;padding: 0;<br>
+                    &nbsp;&nbsp;margin: 0;<br>
+                    &nbsp;&nbsp;border: 5px solid green;<br>
+                    }<br>
+                    <br>
+                    float-image-10 {<br>
+                    &nbsp;&nbsp;float: left;<br>
+                    }<br>
+                    <br>
+                    #group:after {<br>
+                    &nbsp;&nbsp;content: "";<br>
+                    &nbsp;&nbsp;display: table;<br>
+                    &nbsp;&nbsp;clear: both;<br>
+                    }
+                  </code>
+                  <p>where:</p>
+                  <ul>
+                    <li>
+                      <i>::after</i> - pseudo element that inserts something 
+                      after the content of the selected element(s). 
+                    </li>
+                    <li>
+                      <i>content</i> - property to specify the content to 
+                      insert.
+                    </li>
+                    <li>
+                      <i>display</i> - specifies the type of rendering box to be 
+                      used for the selected element.
+                    </li>
+                  </ul>
+                  <h5>Result</h5>
+                  <div id="group">
+                    <img id="float-image-10" src="images/avatar.png"alt="avatar" width="150">
+                    <p>
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                      The quick brown fox jumps over the lazy dog.
+                    </p>
+                  </div>
+                  <p><b>Advantages:</b></p>
+                  <ol>
+                    <li>Background/border extends to the height of the floated element.</li>
+                    <li>This method does not require an empty &lt;div> element to achieve the clear.</li>
+                  </ol>
                 </li>
               </ul>
             </li>
