Create clean.html and add 'Staying DRY' section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       			<a href="fonts.html">Fonts</a>
       			<a href="styles.html">Styles</a>
       			<a href="float.html">Float Property</a>
+      			<a href="clean.html">Clean Code</a>
       		</div>
       	</div>
       	<div class="dropdown">
@@ -95,25 +96,24 @@
 				<section>
 					<h3>About</h3>
 					<p>
-						Welcome to <i>HTML5Tech</i>, an ever-growing web site with 
+						Welcome to <i>HTML5Tech</i>, an ever-growing website with 
 						fundamental resources about HTML5 and friends. 
 					</p>
 					<p>
 						I've started this site while learning web development. The site is 
 						fully responsive and does not use any external libraries or 
 						frameworks. It has been developed from scratch using plain HTML5, 
-						CSS3 and JavaScript. The content is presented in a readable, easier 
+						CSS3, and JavaScript. The content is presented in a readable, easier 
 						to understand fashion to help beginners in the field of front-end 
 						web development. Each article covers a major topic in a client-side 
-						technology therefore this site can be considered an informational 
-						blog.
+						technology, therefore, this site can be considered a blog.
 					</p>
 				</section>
 				<section>
 					<h3>Aim</h3>
 					<p>
 						I've decided to start this page, to help myself and other newbies in 
-						the field of web development. From this site you can learn the 
+						the field of web development. From this site, you can learn the 
 						fundamental concepts of client-side technologies (i.e. HTML, CSS, 
 						Javascript) or you can simply use the site as a reference. 
 					</p>
@@ -123,7 +123,7 @@
 					<p>
 						If you're interested in contributing to the website development, 	
 						head over to the site's repository on 
-						<a href="https://github.com/PictureElement/HTML5Tech">github</a>. 
+						<a href="https://github.com/PictureElement/HTML5Tech">GitHub</a>. 
 						Any questions or suggestions are more than welcomed.
 					</p>
 				</section>
