--- a/clean.html
+++ b/clean.html
@@ -381,3 +381,8 @@
 				    </li>
 				  </ol>
 				</section>
+				<section>
+          <h3>Display Types</h3>
+          <h4>Description</h4>
+          
+
