--- a/selectors.html
+++ b/selectors.html
@@ -653,8 +653,9 @@
 								}<br>
 								<br>
 								/*<br>
-								&nbsp;&nbsp;Select all &lt;button> elements except the first and add a "|" delimiter before the content of the 
-								&nbsp;&nbsp;selected elements.<br>
+								&nbsp;&nbsp;Select all &lt;button> elements except the first and 
+								add a "|" delimiter before the content of
+								&nbsp;&nbsp;the  selected elements.<br>
 								*/<br>
 								#nav-delimiter button:not(:first-child)::before {<br>
 								&nbsp;&nbsp;content: "|";<br>
