Restyle main header

--- a/updated-elements.html
+++ b/updated-elements.html
@@ -29,62 +29,63 @@
 	</head>
 	<body>
 		<header>
-			<img class="website-logo" src="images/logomakr_9fa58h.png" alt="website logo" width="500">
-      <!--
-      <div class="tagline">
-        <h4>Fundamental resources about HTML5 &amp; friends</h4>
-      </div>
-      -->
-			<nav class="main-nav">
-      	<a href="index.html">Home</a>
-      	<div class="dropdown">
-      		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
-      		<div class="dropdown-content">
-      			<a href="elements.html">Elements</a>
-      			<a href="images.html">Images</a>
-      			<a href="html-common-mistakes.html">Common Mistakes</a>
-      			<a href="forms.html">Forms</a>
-      			<a href="tables.html">Tables</a>
-      			<a href="">6</a>
-      		</div>
-      	</div>
-				<div class="dropdown">
-      		<button id="current" class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
-      		<div class="dropdown-content">
-      			<a href="whats-new.html">What's New</a>
-      			<a href="updated-tags.html">Updated Tags</a>
-      			<a href="updated-elements.html">Updated Elements</a>
-      			<a href="new-elements.html">New Elements</a>
-      			<a href="new-input-types.html">New Input Types</a>
-      			<a href="new-input-attributes.html">New Input Attributes</a>
-      			<a href="new-form-elements.html">New Form Elements</a>
-      		</div>
-      	</div>
-      	<div class="dropdown">
-      		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
-      		<div class="dropdown-content">
-      			<a href="selectors.html">Selectors</a>
-      			<a href="color.html">Color</a>
-      			<a href="box-model.html">Box Model</a>
-      			<a href="fonts.html">Fonts</a>
-      			<a href="styles.html">Styles</a>
-      			<a href="float.html">Float Property</a>
-      			<a href="clean.html">Clean Code</a>
-      			<a href="adaptive-responsive.html">Adaptive & Responsive Design</a>
-      		</div>
-      	</div>
-      	<div class="dropdown">
-      		<button class="dropbtn">JavaScript<span class="arrow">&#9660;</span></button>
-      		<div class="dropdown-content">
-      			<a href="">1</a>
-      			<a href="">2</a>
-      			<a href="">3</a>
-      			<a href="">4</a>
-      			<a href="">5</a>
-      			<a href="">6</a>
-      		</div>
-      	</div>
-  		</nav>
+			<div id="branding-container">
+				<div id="branding">
+					<img class="website-logo" src="images/logomakr_9fa58h.png" alt="website logo" width="300">
+				</div>
+			</div>
+			<div id="nav-container">
+				<nav class="main-nav">
+	      	<a href="index.html">Home</a>
+	      	<div class="dropdown">
+	      		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
+	      		<div class="dropdown-content">
+	      			<a href="elements.html">Elements</a>
+	      			<a href="images.html">Images</a>
+	      			<a href="html-common-mistakes.html">Common Mistakes</a>
+	      			<a href="forms.html">Forms</a>
+	      			<a href="tables.html">Tables</a>
+	      			<a href="">6</a>
+	      		</div>
+	      	</div>
+					<div class="dropdown">
+	      		<button id="current" class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
+	      		<div class="dropdown-content">
+	      			<a href="whats-new.html">What's New</a>
+	      			<a href="updated-tags.html">Updated Tags</a>
+	      			<a href="updated-elements.html">Updated Elements</a>
+	      			<a href="new-elements.html">New Elements</a>
+	      			<a href="new-input-types.html">New Input Types</a>
+	      			<a href="new-input-attributes.html">New Input Attributes</a>
+	      			<a href="new-form-elements.html">New Form Elements</a>
+	      		</div>
+	      	</div>
+	      	<div class="dropdown">
+	      		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
+	      		<div class="dropdown-content">
+	      			<a href="selectors.html">Selectors</a>
+	      			<a href="color.html">Color</a>
+	      			<a href="box-model.html">Box Model</a>
+	      			<a href="fonts.html">Fonts</a>
+	      			<a href="styles.html">Styles</a>
+	      			<a href="float.html">Float Property</a>
+	      			<a href="clean.html">Clean Code</a>
+	      			<a href="adaptive-responsive.html">Adaptive & Responsive Design</a>
+	      		</div>
+	      	</div>
+	      	<div class="dropdown">
+	      		<button class="dropbtn">JavaScript<span class="arrow">&#9660;</span></button>
+	      		<div class="dropdown-content">
+	      			<a href="">1</a>
+	      			<a href="">2</a>
+	      			<a href="">3</a>
+	      			<a href="">4</a>
+	      			<a href="">5</a>
+	      			<a href="">6</a>
+	      		</div>
+	      	</div>
+	  		</nav>
+	  	</div>
 		</header>
 		<main>
 			<article>
