--- a/index.html
+++ b/index.html
@@ -196,21 +196,20 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="bg-dark text-center text-muted">
-      <div class="footer-wrapper">
-        <div class="footer-item">
-          <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img width="100px" alt="CC BY-SA 4.0 License" style="border-width:0" src="https://img.shields.io/badge/License-CC%20BY--SA%204.0-lightgrey.svg" /></a><br>Documentation is licensed under the <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    <footer class="text-center text-muted">
+        <div class="license bg-dark">
+          <div>
+              <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img width="100px" alt="CC BY-SA 4.0 License" style="border-width:0" src="https://img.shields.io/badge/License-CC%20BY--SA%204.0-lightgrey.svg" /></a><br>Documentation is licensed under the <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0 License</a>.
+          </div>
+          <div>
+              <a rel="license" href="https://www.gnu.org/licenses/agpl-3.0"><img width="80px" alt="GNU AGPLv3 License" style="border-width:0" src="https://img.shields.io/badge/License-AGPL%20v3-blue.svg" /></a><br><a href="#">Source code</a> is licensed under the <a rel="license" href="https://www.gnu.org/licenses/agpl-3.0">AGPL v3 License</a>.
+          </div>
         </div>
-        <div class="footer-item">
-          <a rel="license" href="https://www.gnu.org/licenses/agpl-3.0"><img width="80px" alt="GNU AGPLv3 License" style="border-width:0" src="https://img.shields.io/badge/License-AGPL%20v3-blue.svg" /></a><br><a href="#">Source code</a> is licensed under the <a rel="license" href="https://www.gnu.org/licenses/agpl-3.0">GNU Affero General Public License v3.0</a>.
+        <div class="copyright bg-light">
+            Design &amp; development by 
+            <a href="https://pictureelement.github.io/portfolio-2-html5/">
+            PictureElement</a> (Marios Sofokleous).
         </div>
-        <hr class="border-secondary">
-        <div class="footer-item">
-          Design &amp; development by 
-          <a href="https://pictureelement.github.io/portfolio-2-html5/">
-          PictureElement</a> (Marios Sofokleous).
-        </div>
-      </div>
     </footer>
 
     <!-- Optional JavaScript -->
