Modify topic pages to reflect the homepage changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>JavaScript/Welcome</title>
+    <title>HTML5Tech/Homepage</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -58,7 +58,7 @@
             <div>
               <h5 class="sb-topic">Basic JS</h5>
               <ol class="sb-list">
-                <li><a id="current" href="data-related.html">Data-related</a></li>
+                <li id="current"><a href="data-related.html">Data-related</a></li>
                 <li><a href="dom.html">Document Object Model</a></li>
                 <li><a href="object-related.html">Object-related</a></li>
                 <li><a href="flow-control.html">Flow control</a></li>
